--- a/old/src/about-view.html
+++ b/old/src/about-view.html
@@ -36,7 +36,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .copyright{
         width: 100%;
-        /*bottom: 0px;*/
         margin-top: -10px;
         font-size: 0.55em;
         color: var(--secondaryFontColorCard);
@@ -181,7 +180,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               </div>
               <div class="column">
                   <div class="imgBox">
-                      <img src="../images/hiebl_bild.jpg"  height="468,5" width="312,5">
+                      <img src="../images/urbanides_bild.jpg"  height="468,5" width="312,5">
                   </div>
                   <div class="details">
                       <h3>Konstanin Urbanides<br><span>Polymer</span></h3>
