--- a/old/src/browse-unit.html
+++ b/old/src/browse-unit.html
@@ -93,7 +93,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       paper-input.input{
         width: 100%;
         color:var(--secondaryFontColorCard);
-        --paper-input-container-input-color: var(--secondaryFontColorCard);
         --paper-input-container-underline: {
           display: none;
         };
@@ -152,7 +151,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <paper-dialog id="filters">
         <h2>Filter</h2>
         <div>
-            <paper-input class="input" name="unfilter" label="Enter username of your friend" no-label-float><iron-icon class="socialIcon" icon="social:people" slot="prefix"></iron-icon></paper-input>
+            <paper-input class="input" name="unfilter" label="Enter username of your friend"><iron-icon class="socialIcon" icon="social:people" slot="prefix"></iron-icon></paper-input>
             <paper-button id="save" name="save">Apply</paper-button>
         </div>
       </paper-dialog>
