--- a/old/src/overview-page.html
+++ b/old/src/overview-page.html
@@ -274,7 +274,7 @@
       _routePageChanged(page) {
         // If no page was found in the route data, page will be an empty string.
         // Default to 'view1' in that case.
-        this.page = page || 'unit-overview';
+        this.page = page || 'home-view';
         // Close a non-persistent drawer when the page & route are changed.
         if (!this.$.drawer.persistent) {
           this.$.drawer.close();
@@ -439,9 +439,6 @@
       }
       _getModeInput(){
         return Polymer.dom(this.root).querySelector("input[name=mode]");
-      }
-      _getLearnProgressbar(){
-        return Polymer.dom(this.root).querySelector("paper-progress[name=learn]");
       }
     }
 
