--- a/old/src/statistics-view.html
+++ b/old/src/statistics-view.html
@@ -32,7 +32,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
 
       paper-tabs{
-        display: none;
+        display: "none";
         width: 95%;
         margin-left: 40px;
         margin-top: 60px;
@@ -87,7 +87,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-slider.slide{
         width: 20%;
-        margin-left: 27%;
+        margin-left: 300px;
         margin-top: -40px;
         color: var(--headlineCard);
         --paper-slider-knob-color: var(--headlineCard);
@@ -104,17 +104,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
       }
       #sliderDay{
-        margin-left: 27.5%;
+        margin-left: 305px;
         margin-top: -5px;
         font-size: 0.80em;
       }
       #sliderWeek{
-        margin-left: 35.5%;
+        margin-left: 400px;
         margin-top: -30px;
         font-size: 0.80em;
       }
       #sliderMonth{
-        margin-left: 44%;
+        margin-left: 500px;
         margin-top: -32.5px;
         font-size: 0.80em;
       }
