--- a/old/src/account-view.html
+++ b/old/src/account-view.html
@@ -248,7 +248,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </tr>
             <tr>
               <td><paper-input class="username" label="Username"></paper-input></td>
-              <td><paper-input class="password" label="Password" char-counter minlength="5" char-counter maxlength="16" required auto-validate error-message="this field must be filled [min. 5 characters]" type="password"></paper-input></td>  
+              <td><paper-input class="password" label="Password" char-counter minlength="5" char-counter required auto-validate error-message="this field must be filled [min. 5 characters]" type="password"></paper-input></td>  
             </tr>
           </table>
       </div>
