bugfixes + added mottos to unitresult

--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -244,7 +244,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 
             </tr>
             <tr>
-                <td><paper-input class="birthDate" label="BirthDate"></paper-input></td>
+                <td><paper-input class="birthDate" label="Birthdate"></paper-input></td>
             </tr>
             <tr>
               <td><paper-input class="username" label="Username"></paper-input></td>
