--- a/old/src/my-app.html
+++ b/old/src/my-app.html
@@ -42,6 +42,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="register-login.html">
 <link rel="lazy-import" href="overview-page.html">
 <link rel="lazy-import" href="register-new.html">
+<link rel="lazy-import" href="presentation-page.html">
 
 <dom-module id="my-app">
   <template>
@@ -109,6 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <register-login name="register-login"></register-login>
           <register-new name="register-new"></register-new>
           <overview-page name="overview-page"></overview-page>
+          <presentation-page name="presentation-page"></presentation-page>
         </iron-pages>
         <shared-style></shared-style>
         <paper-toast id="toast1" text="Registration was successful!"></paper-toast>
