--- a/Vocabulous/src/practice-overview.html
+++ b/Vocabulous/src/practice-overview.html
@@ -75,7 +75,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100%;
       }
       .sweep-to-bottom-answer:hover:after{
-        content:'Dieser Lernmodus ist für asidjasdoaskdok odjfsjdfsd sdf9sd disfjsdf sdfjs sidfsidf sdfjisd sidfisjdf sdifsidf  sdfd df dsf  s df';
+        content:'This learning mode is especially for students who are motor learners. In this mode you have to write the words you are looking for either English or German in a text box';
         font-weight: 300;
         font-style: italic;
         font-size: 0.9em;
@@ -101,7 +101,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100%;
       }
       .sweep-to-bottom-memory:hover:after{
-        content:'Dieser Lernmodus ist für asidjasdoaskdok';
+        content:'This learning mode is especially for students who are visual leaners. In this mode yout have to find the matching memory cards';
         font-weight: 300;
         font-style: italic;
         font-size: 0.9em;
